# advent-of-code-2015

./: .ghcid  .gitignore  README.md  advent-of-code.cabal  advent-of.code-workspace  hie.yaml  package.yaml
app/AoC/: Main.hs
app/Day01/: Main.hs
app/Day02/: Main.hs
app/Day03/: Main.hs
app/Day04/: Main.hs
app/Day05/: Main.hs
src/Day01/: Floor.hs  Solution.hs
src/Day02/: Solution.hs  Wrapping.hs
src/Day03/: Delivery.hs  Solution.hs
src/Day04/: AdventCoin.hs  Solution.hs
src/Day05/: NiceString.hs  Solution.hs
src/Day06/: Lights.hs  Solution.hs
src/Day07/: Circuits.hs  Solution.hs
src/Day08/: Matchsticks.hs  Solution.hs
test/Day01/: FloorSpec.hs
test/Day02/: WrappingSpec.hs
test/Day03/: DeliverySpec.hs
test/Day04/: AdventCoinSpec.hs
test/Day05/: NiceStringSpec.hs
test/Day06/: LightsSpec.hs
test/Day07/: CircuitsSpec.hs
test/Day08/: MatchsticksSpec.hs
